testdata/invalid/ringbuf_scalar_value.hzn
package probes

map Events ringbuf[u32]
